src/objects/Approval_Result__c.object
<CustomObject>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approval_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Link_to_Record__c</fullName>
        <label>Link to Record</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Name__c</fullName>
        <label>Record Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <label>Result</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Approval Result</label>
    <nameField>
        <displayFormat>AR-{0000}</displayFormat>
        <label>Approval Result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approval Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>